--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "gavinlab",
+  "name": "gavinlabs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "changeset": "changeset",
+    "packages-version": "changeset version",
+    "publish": "changeset publish --registry=https://registry.npmjs.com/"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@changesets/cli": "^2.26.2",
     "lodash-es": "^4.17.21"
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.26.2"
   }
 }
