--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,9 +47,9 @@ jobs:
         # 参数配置
         with:
           # 发布时执行什么命令
-          publish: pnpm publish
+          publish: pnpm run publish
           # 消耗 changeset 文件的命令；不需要自定义可不填
-          version: pnpm changeset version
+          version: pnpm run packages-version
           # 提交的信息是什么；如果有 commitlint 验证，需要更改。
           commit: "chore: version packages"
         # 此步骤的环境变量，下一步讲解
