ci: remove npmrc

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "changeset": "changeset",
     "packages-version": "changeset version",
-    "publish": "changeset publish --registry=https://registry.npmjs.com/"
+    "publish": "changeset publish"
   },
   "keywords": [],
   "author": "",
